<resources>
    <string name="gastoTotales">Gastos Totales</string>
    <string name="ingresosTotales">Ingresos</string>
    <string name="otrosGastos">Otros Gastos</string>

    <string name="app_name">Admin Oficina</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="email">e-mail</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="descrip">Descripción</string>

    <string name="msg_campos_vacios">No debe dejar campos vacios (*)obligatorios</string>
    <string name="msg_monto_cero">El monto debe de ser mayor a cero.</string>
    <string name="msg_monto_mayor_a_gasto">El monto del comprobante es mayor al gasto.</string>
    <string name="msg_monto_mayor_a_caja">El monto a gastar es mayor a lo que hay en caja.</string>
    <string name="msg_fecha">Seleccione la fecha</string>
    <string name="msg_foto">Debes de ingresar una foto</string>
    <string name="msg_usiarioIncorrecto">Usuario o contraseña incorrectos.</string>
    <string name="msg_success">Registro exitoso</string>
    <string name="msg_error">Ocurrio un error intentelo de nuevo</string>
    <!-- Menu  -->

    <string name="inicio">Inicio</string>
    <string name="rutas">Rutas</string>
    <string name="tiendas">Tiendas</string>

    <string name="nuevaRuta">Nueva Ruta</string>
    <string name="nuevaTienda">Nueva Tienda</string>

    <string name="ingresoEgresos">Ingresos/Egresos</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="compGastos">Comprobación de gastos</string>
    <string name="pagoNomina">Pago de Nomina</string>
    <string name="comprobanteGastos">Comprobante de Gastos</string>
    <string name="todos">Todos</string>
    <string name="categoria">Categ</string>

    <string name="empleados">Trabajadores</string>

    <string name="semana1">Semana 1</string>
    <string name="semana2">Semana 2</string>
    <string name="semana3">Semana 3</string>
    <string name="semana4">Semana 4</string>
    <string name="semana">Semana</string>

    <string name="vehiculos">Vehiculos</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="gasolina">Gasolina</string>

    <string name="despacho">Despacho</string>
    <string name="clientes">Clientes</string>
    <string name="honorarios">Honorarios</string>

    <string name="HomeFragment">Hello Home Fragment</string>

    <!-- Dialog SelectPhoto-->
    <string name="titleDialogSelectPhoto">Selecciona o toma una foto.</string>


    <!-- Dialog Vehiculo -->
    <string name="nuevoVehiculo">Nuevo Vehiculo</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_update">Actualizar</string>

    <!-- Dialog Empleado -->
    <string name="nombre">* Nombre</string>
    <string name="puesto">* Puesto</string>
    <string name="sueldo">* Sueldo</string>
    <string name="empresa">* Empresa</string>
    <string name="telefono">* Telefono</string>

    <!-- Dialog Honorario -->
    <string name="addHonorario">Registro</string>
    <!-- Dialog Cliente-->
    <string name="addCliente">Nuevo cliente</string>
    <string name="rfc">* RFC</string>
    <string name="curp">* CURP</string>
    <string name="mensulidad">* Honorarios</string>
    <string name="passSat">Contraseña SAT</string>
    <string name="passFiel">Contraseña FIEL</string>
    <string name="passCertificado">Contraseña Certificado</string>
    <string name="updateHono">Actualiza</string>
    <string name="numRegistro">Num. de Registro: %s</string>

    <!-- Fragment Gastos Gasolido-->
    <string name="gasolinaTitle">Gastos en Gasolina</string>
    <string name="gastoMantenimiento">Gastos en Mantenimiento</string>

    <string name="busquedaFecha">Busqueda por fecha</string>
    <string name="fechaIni">Fecha inicial</string>
    <string name="fechaFin">Fecha Final</string>
    <string name="monto">$ %s</string>
    <string name="total">Total: $ %s</string>
    <string name="pesoscaja">$ %s Pesos.</string>
    <string name="label_total">Total</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comprobantegasto">Comprobante de Gastos</string>
    <string name="cantActualCaja">En Caja.</string>

    <string name="titlecaja">Abono a caja</string>
    <string name="concepto">Concepto</string>
    <string name="fecha">Fecha</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="litros">Litros</string>
    <string name="labelmonto">$</string>
    <string name="caja">Caja</string>

    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="estadoHonorario">Estatus:</string>
    <string name="pagado">Pagado</string>
    <string name="noPagado">No Pagado</string>
    <string name="abonado">Abono</string>

    <string name="cobraOxxo">¿Por cobrar a oxxo?</string>

    <string name="tipoComprobante">Comprob.:</string>

    <string name="fechaDetails">Fecha:</string>
    <string name="vehiculoDetails">Vehiculo:</string>
    <string name="marcaDetails">Marca:</string>
    <string name="modeloDetails">Modelo:</string>
    <string name="litrosDetails">Litros:</string>
    <string name="tipoGasDetails">Gasolina:</string>
    <string name="montoDetails">Monto:</string>

    <string name="anterior">Anterior</string>
    <string name="separador"> | </string>
    <string name="siguiente">Siguiente</string>

    <string name="details_label_litros">%s Litros</string>
</resources>
