<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/_nav_home"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/_nav_ruta"
            android:title="@string/rutas"/>

    </group>

    <item android:title="@string/empleados">
        <menu>
            <item
                android:id="@+id/_nav_empleados"
                android:title="@string/empleados"/>

            <item
                android:id="@+id/_nav_pago_nomina"
                android:title="@string/pagoNomina"/>
        </menu>
    </item>

    <item android:title="@string/vehiculos">
        <menu>
            <item
                android:id="@+id/_nav_registro_vehiculo"
                android:title="@string/vehiculos"/>
            <item
                android:id="@+id/_nav_registro_mantenimiento"
                android:title="@string/mantenimiento"/>

            <item
                android:id="@+id/_nav_gasto_gasolina"
                android:title="@string/gasolina"/>

        </menu>
    </item>

    <item android:title="@string/despacho">
        <menu>
            <item
                android:id="@+id/_nav_clientes"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/clientes" />
            <item
                android:id="@+id/_nav_honorarios"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/honorarios" />
        </menu>
    </item>

</menu>
