<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.despacho.com.ofinicaerp.fragments.GastoGasolinaFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:text="@string/gasolinaTitle"
        android:textAlignment="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.495" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/busquedaFecha"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/frag_gasolina_fechaIni"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:focusable="false"
        android:hint="@string/fechaIni"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/frag_gasolina_fechaFin"
        android:layout_width="150dp"
        android:textAlignment="center"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:hint="@string/fechaFin"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/frag_gasolina_fechaIni" />

    <Button
        android:enabled="false"
        android:alpha="0.3"
        android:id="@+id/btn_buscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/frag_gasolina_fechaIni"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/custom_header_recyclerview"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar">
        <TextView
            android:id="@+id/fecha"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"/>

        <TextView
            android:id="@+id/carro"
            android:layout_toEndOf="@id/fecha"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehiculo"/>

        <TextView
            android:id="@+id/litros"
            android:layout_toEndOf="@id/carro"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litros"/>

        <TextView
            android:id="@+id/gas"
            android:layout_toEndOf="@id/litros"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelmonto"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/frag_gasolina_recyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <RelativeLayout
        android:background="@drawable/custom_footer_recyclerview"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/frag_gasolina_recyclerView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/labelTotal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
