<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.despacho.com.ofinicaerp.fragments.NominaFragment">

    <Spinner
        android:id="@+id/spinner_mes"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_ano"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_buscar"
        app:layout_constraintStart_toEndOf="@+id/spinner_mes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTeal"
        android:text="@string/btn_buscar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_header_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar">

        <TextView
            android:id="@+id/lbl_empleados"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/empleados"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbl_semana1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/lbl_empleados"
            android:text="@string/semana1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbl_semana2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/lbl_semana1"
            android:text="@string/semana2"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbl_semana3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/lbl_semana2"
            android:text="@string/semana3"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbl_semana4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/lbl_semana3"
            android:text="@string/semana4"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbl_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/lbl_semana4"
            android:text="@string/label_total"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_nomina"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout7" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_footer_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/relativeLayout3">

        <TextView
            android:id="@+id/labelTotal_ingreso"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
